fix: update z-index value for body to ensure proper layering

--- a/user1/user/Message/style.css
+++ b/user1/user/Message/style.css
@@ -87,7 +87,8 @@ body {
   margin-left: 0;
   padding: 2vh 4vw;
   position: fixed;
-  z-index: -1;
+  z-index: 2
+  ;
   display: flex;
   justify-content: flex-end;
   align-items: center;
